page styling only: remove fileman content overlap with header. remove redundant manager css cruft in skins. try to avoid folder icons flying around by always aligning to top. generally center context menu items vertically and increase font size for readability.
git-svn-id: svn+ssh://svn.code.sf.net/p/migrid/code/trunk@2723 b75ad72c-e7d7-11dd-a971-7dbc132099af

--- a/mig/images/css/jquery.contextmenu-1.6.6-custom.css
+++ b/mig/images/css/jquery.contextmenu-1.6.6-custom.css
@@ -176,7 +176,7 @@ Original license header follows...
 
 
 
-/*** The rest are our own overrides to replace epscially icons ***/
+/*** The rest are our own overrides to layout entries and set icons ***/
 
 /*
   Adding Icons
@@ -231,7 +231,22 @@ Original license header follows...
 .context-menu-list LI.icon-verbosestatus { background-image: url(/images/icons/information.png); }
 .context-menu-list LI.icon-select { background-image: url(/images/icons/hourglass_add.png); }
 
-/* don't color hightlighted entry blue */
+/* don't color hightlighted entry blue by default - override in skins */
 .context-menu-item.hover {
     background-color: white;
+}
+
+/* increase font size */
+.context-menu-item {
+    font-size: 12px;
+}
+
+/* vertically center entries */
+.context-menu-item > span, .context-menu-item.icon {
+    vertical-align: middle;
+    min-height: 16px;
+}
+/* vertically center submenu marker */
+.context-menu-submenu:after {
+    top: inherit;
 }
