--- a/mig/images/css/jquery.managers.css
+++ b/mig/images/css/jquery.managers.css
@@ -4,7 +4,7 @@
 # --- BEGIN_HEADER ---
 #
 # jquery.managers - style overrides for multiple pages
-# Copyright (C) 2003-2014  The MiG Project lead by Brian Vinter
+# Copyright (C) 2003-2015  The MiG Project lead by Brian Vinter
 #
 # This file is part of MiG.
 #
@@ -29,9 +29,7 @@
 
 #fm_filemanager {
     width: auto;
-
-    margin-top: -16px;
-
+    margin-top: -10px;
     background: #ccc;
     border: 1px solid grey;
     padding: 4px;
@@ -455,14 +453,14 @@ UL.jqueryFileList A:hover {
 
 
 /* File Extensions */
-.directoryicon { background: url(/images/icons/folder.png) left center no-repeat; }
+.directoryicon { background: url(/images/icons/folder.png) left top no-repeat; }
 .fileicon { background: url(/images/icons/file.png) left center no-repeat; }
 
 /* override folder icon for user home and vgrid folders */
-.userhome { background: url(/images/icons/folder_user.png) left center no-repeat; }
-.vgridshared { background: url(/images/icons/folder_link.png) left center no-repeat; }
-.vgridpublicweb { background: url(/images/icons/folder_table.png) left center no-repeat; }
-.vgridprivateweb { background: url(/images/icons/folder_key.png) left center no-repeat; }
+.userhome { background: url(/images/icons/folder_user.png) left top no-repeat; }
+.vgridshared { background: url(/images/icons/folder_link.png) left top no-repeat; }
+.vgridpublicweb { background: url(/images/icons/folder_table.png) left top no-repeat; }
+.vgridprivateweb { background: url(/images/icons/folder_key.png) left top no-repeat; }
 
 /* use top here because it is relative to self plus all expanded children */
 .expanded { 
